NIFI-16127 Removed redundant usage of unmodifiable collection wrappers.